--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SDK for signing and authenticating requests",
   "main": "./lib",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine"
+    "test": "./node_modules/.bin/jasmine",
+    "lint": "eslint ./lib --fix"
   },
   "repository": {
     "type": "git",
@@ -15,12 +16,21 @@
   "bugs": {
     "url": "https://github.com/bypasslane/api-keys-js-sdk/issues"
   },
+  "publishConfig": {
+    "registry": "https://bpm.jfrog.io/bpm/api/npm/bypass/"
+  },
   "homepage": "https://github.com/bypasslane/api-keys-js-sdk#readme",
   "dependencies": {
     "crypto-js": "^3.1.7",
     "request-promise": "^1.0.2"
   },
   "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jasmine": "^2.4.1",
     "mockery": "^1.4.0",
     "nock": "^8.0.0",
